--- a/app/views/user/comments/index.html.erb
+++ b/app/views/user/comments/index.html.erb
@@ -1,23 +1,39 @@
-コメント
-
-<table>
-  <% @video.comments.each do |comment| %>
-    <% comment_user = comment.user %>
-    <tr>
-    	<td>
-    		<%= link_to user_user_path(comment_user) do %>
-      		<%= attachment_image_tag comment_user, :icon, :fill, 50, 50, fallback: "no_image.jpg", size: "50x50" %><br>
-      		<%= comment_user.nick_name %>
-    		<% end %>
-    	</td>
-    	<td><%= comment.comment %></td>
-    	<% if current_user == comment_user %>
-      	<td><%= link_to 'Destroy', user_video_comment_path(comment.video_id, comment.id), class: 'btn-sm btn-danger', method: :delete %></td>
-    	<% end %>
-    </tr>
-  <% end %>
-</table>
-<%= form_with model:[@video,@comment], url: user_video_comments_path, method: :POST do |f| %>
-  <%= f.text_area :comment, size:"90x5" %><br>
-  <%= f.submit '送信'%>
-<% end %>
+<div class="p-main mt-3">
+  <div class="row mx-0 ml-2">
+    <i class="fas fa-arrow-left"></i>
+    <%= link_to "戻る", user_video_path(@video) %>
+  </div>
+  
+  <h2 class="text-center mb-3 pb-3" style="color: #1a1a1a+;">動画</h2>
+  <h3 class="text-center mb-0" style="color: #1a1a1a+; background-color: #ffd5da; padding: 10px 0; border-top: solid 1px #EB3642;">コメント</h3>
+  <div class="row justify-content-center mx-1 my-4">
+  
+      <table>
+      <% @video.comments.each do |comment| %>
+        <% comment_user = comment.user %>
+        <tr>
+        	<td>
+        		<%= link_to user_user_path(comment_user) do %>
+          		<%= comment_user.nick_name %>
+        		<% end %>
+        		(<%= comment_user.account %>)
+         	　<%= comment.comment %>
+        	<% if current_user == comment_user %>
+          	<%= link_to 'Destroy', user_video_comment_path(comment.video_id, comment.id), class: 'btn-sm btn-danger', method: :delete %>
+        	<% end %>       		
+        	</td>
+        </tr>
+      <% end %>
+      
+        <tr>
+          <%= form_with model:[@video,@comment], url: user_video_comments_path, method: :POST do |f| %>
+            <td><%= f.text_area :comment, size:"90x5" %></td>
+            <td><%= f.submit '送信'%></td>
+          <% end %>
+        </tr>
+      </table>
+  
+  </div>
+  
+  </div>
+</div>
