--- a/app/views/user/informations/show.html.erb
+++ b/app/views/user/informations/show.html.erb
@@ -6,6 +6,7 @@
   <h2 class="text-center mb-3 pb-3" style="color: #1a1a1a+;">告知</h2>
   <h3 class="text-center mb-0" style="color: #1a1a1a+; background-color: #ffd5da; padding: 10px 0; border-top: solid 1px #EB3642;">告知詳細</h3>
   <div class="row justify-content-center">
+    
     <div class="col-10">
       <div class>
         <div class="col-xs-12 mx-auto information_border">
@@ -39,9 +40,13 @@
             <!--</div>-->
             
           <div class="row justify-content-center">
-            <!--自分ののみ削除表示-->
-            <%= link_to "編集", edit_user_information_path(@information) %>
-            <%= link_to "削除", user_information_path(@information), method: :delete %>
+            <% information_user = @information.user %>
+              <% if current_user == information_user %>
+              
+                <%= link_to "編集", edit_user_information_path(@information) %>
+                |
+                <%= link_to "削除", user_information_path(@information), method: :delete %>
+              <% end %>
           </div>
         </div>
       </div>
