--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -1,38 +1,90 @@
-<h2>Sign up</h2>
-
-<!--%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>-->
-<%= form_with model:@user, url: user_registration_path, local: true do |f| %>
-  <%= render "user/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-  
-  <div class="account-field">
-    <%= f.label :account %><br />
-    <%= f.label :challenger  %>
-    <%= f.radio_button :account, :challenger %>
-    <%= f.label :coach  %>
-    <%= f.radio_button :account, :coach %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <h4 class="customer-new">新規会員登録</h4>
+    </div>
+    <div class="col-md-9"></div>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  <div class="row">
+    <div class="col-md-10">
+      <%= form_with model:@user, url: user_registration_path, local: true do |f| %>
+      <%= render "user/shared/error_messages", resource: resource %>
+
+          <table class="table table-noborder">
+            <tbody>
+              <tr>
+                <td>名前</td>
+                <td>
+                  <div class="field">
+                    <%= f.text_field :full_name, autofocus: true, placeholder: "サンプル太郎", class:"ml-5" %>
+                  </div>
+                </td>
+              </tr>
+              
+              <tr>
+                <td>アカウント</td>
+                <td>
+                  <div class="field">
+                    <%= f.label :challenger %>
+                    <%= f.radio_button :account, :challenger, class:"ml-2" %>
+                    <%= f.label :coach  %>
+                    <%= f.radio_button :account, :coach, class:"ml-2" %>
+                  </div>
+                </td>
+              </tr>
+
+              <tr>
+                <td>メールアドレス</td>
+                <td>
+                  <div class="field">
+                    <%= f.email_field :email, autofocus: true, placeholder: "sample@example.com", class:"ml-5" %>
+                  </div>
+                </td>
+              </tr>
+
+              <tr>
+                <td>パスワード(6文字以上)</td>
+                <td>
+                  <div class="field">
+                    <%= f.password_field :password, class:"ml-5" %>
+                  </div>
+                </td>
+              </tr>
+
+              <tr>
+                <td>パスワード(確認用)</td>
+                <td>
+                  <div class="field">
+                    <%= f.password_field :password_confirmation, class:"ml-5" %>
+                  </div>
+                </td>
+              </tr>
+
+              <tr>
+                <td></td>
+                <td>
+                  <div class="actions">
+                    <%= f.submit "新規登録", class:"ml-5  btn btn-success user-sign-up" %>
+                  </div>
+                </td>
+              </tr>
+
+            </tbody>
+          </table>
+      <% end %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="row">
+    <div class="col-md-4">
+      <h4 class="user-already">既に登録済みの方</h4>
+    </div>
+    <div class="col-md-8"></div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="row">
+    <div class="col-md-5 user-login-link">
+      <%= link_to "こちら", new_user_session_path %> からログインしてください。
+    </div>
   </div>
-<% end %>
-
-<%= render "user/shared/links" %>
+</div>
