--- a/app/views/user/users/index.html.erb
+++ b/app/views/user/users/index.html.erb
@@ -3,7 +3,7 @@
     <i class="fas fa-arrow-left"></i>
     <%= link_to "戻る", user_user_path(@user) %>
   </div>
-  <h2 class="text-center mb-3 pb-3" style="color: #1a1a1a; border-bottom: solid 1px #EB3642;">コーチ一覧</h2>
+  <h3 class="text-center mb-0" style="color: #1a1a1a+; background-color: #ffd5da; padding: 10px 0; border-top: solid 1px #EB3642;">コーチ一覧</h3>
     <div class="container text-center mt-3 col-md-12 col-sm-12 col-12">
     <% @users. each do |user| %>
       <div class="row d-flex justify-content-center">
