--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,9 @@
 @import "bootstrap";
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
+
+.btn-default {
+  color: #fff;
+  background-color: #eb6100;
+  border-radius: 100vh;
+}
