--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,8 @@
-<footer>
+<footer class="p-footer text-center" id="footer" style="top: 0px; background-color: #ffd5da;">
+  <div class="text-center" style="margin: 30px;">
+    <%= image_tag asset_path("C2C.jpeg"), size: '150x100' , class: 'logo'%>
+  </div>
   <div>
     <p class="text-center">copy.right</p>
+  </div>
+</footer>
