--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -73,31 +73,31 @@
 
           <div class="form-group row mb-0">
             <div class="col-md-6 offset-md-4 text-center mt-2 mx-auto">
-              <%= link_to "編集", edit_user_user_path(@user.id) %>
+              <%= link_to "編集", edit_user_user_path(@user), class: 'btn btn-default' %>
             </div>
           </div>
 
           <div class="form-group row mb-0">
             <div class="col-md-6 offset-md-4 text-center mt-2 mx-auto">
-              <%= link_to "動画投稿", new_user_video_path %>
+              <%= link_to "動画投稿", new_user_video_path, class: 'btn btn-default' %>
             </div>
           </div>
 
           <div class="form-group row mb-0">
             <div class="col-md-6 offset-md-4 text-center mt-2 mx-auto">
-              <%= link_to "動画一覧", user_videos_path %>
+              <%= link_to "動画一覧", user_videos_path, class: 'btn btn-default' %>
             </div>
           </div>
           
           <div class="form-group row mb-0">
             <div class="col-md-6 offset-md-4 text-center mt-2 mx-auto">
-              <%= link_to "告知一覧", user_informations_path %>
+              <%= link_to "告知一覧", user_informations_path, class: 'btn btn-default' %>
             </div>
           </div>
 
           <div class="form-group row mb-0">
             <div class="col-md-6 offset-md-4 text-center mt-2 mx-auto">
-              <%= link_to "コーチ一覧", user_users_path %>
+              <%= link_to "コーチ一覧", user_users_path, class: 'btn btn-default' %>
             </div>
           </div>
           
@@ -198,41 +198,41 @@
           
         <% if current_user != @user %>
         
-          <% if current_user.following?(@user) %>
-            <%= link_to "フォローを外す", user_user_relationships_path(@user.id), method: :delete, class: "btn btn-info" %>
-          <% else %>
-            <%= link_to "フォローする", user_user_relationships_path(@user.id), method: :post, class: "btn btn-success" %>
-          <% end %>
+          <!--% if current_user.following?(@user) %>-->
+          <!--  %= link_to "フォローを外す", user_user_relationships_path(@user.id), method: :delete, class: "btn btn-info" %>-->
+          <!--% else %>-->
+          <!--  %= link_to "フォローする", user_user_relationships_path(@user.id), method: :post, class: "btn btn-success" %>-->
+          <!--% end %>-->
           
         <% else %>
 
           <div class="form-group row mb-0">
             <div class="col-md-6 offset-md-4 text-center mt-2 mx-auto">
-              <%= link_to "編集", edit_user_user_path(@user) %>
+              <%= link_to "編集", edit_user_user_path(@user), class: 'btn btn-default' %>
             </div>
           </div>
 
           <div class="form-group row mb-0">
             <div class="col-md-6 offset-md-4 text-center mt-2 mx-auto">
-              <%= link_to "告知投稿", new_user_information_path %>
+              <%= link_to "告知投稿", new_user_information_path, class: 'btn btn-default' %>
             </div>
           </div>
 
           <div class="form-group row mb-0">
             <div class="col-md-6 offset-md-4 text-center mt-2 mx-auto">
-              <%= link_to "動画一覧", user_videos_path %>
+              <%= link_to "動画一覧", user_videos_path, class: 'btn btn-default' %>
             </div>
           </div>
           
           <div class="form-group row mb-0">
             <div class="col-md-6 offset-md-4 text-center mt-2 mx-auto">
-              <%= link_to "告知一覧", user_informations_path %>
+              <%= link_to "告知一覧", user_informations_path, class: 'btn btn-default' %>
             </div>
           </div>
 
           <div class="form-group row mb-0">
             <div class="col-md-6 offset-md-4 text-center mt-2 mx-auto">
-              <%= link_to "コーチ一覧", user_users_path %>
+              <%= link_to "コーチ一覧", user_users_path, class: 'btn btn-default' %>
             </div>
           </div>
           
