--- a/app/views/user/informations/index.html.erb
+++ b/app/views/user/informations/index.html.erb
@@ -14,9 +14,8 @@
         <div class="card -body p-2">
           <h5 class="card-text">タイトル：<%= link_to information.title, user_information_path(information) %></h5>
           <h7 class="card-text">ジャンル：</h7>
-          <p class="card-text"><%= information.content %></p>
-          <p class="card-text"><%= information.created_at %></p>
-          <h7 calss="media">ユーザー名：</h7>
+          <h7 calss="card-text">ユーザー名：<%= information.user.full_name %></h7>
+          <p class="card-text"><%= information.created_at.to_s(:datetime_jp)  %></p>
         </div>
         
         <div class="text-center mb-2">
