--- a/app/views/admin/statuses/edit.html.erb
+++ b/app/views/admin/statuses/edit.html.erb
@@ -17,6 +17,7 @@
             <div class="form-group">
               <td>
                 <%= f.submit "変更を保存", class: 'bnt btn-success rounded' %>
+                <%= link_to "戻る", admin_statuses_path, class:"btn btn-primary ml-3" %>
               </td>
             </div>
           </div>
