--- a/app/views/admin/statuses/index.html.erb
+++ b/app/views/admin/statuses/index.html.erb
@@ -16,6 +16,7 @@
             </div>
             <div class="form-group">
               <td><%= f.submit "新規登録", class: 'bnt btn-success rounded status-add-buttom' %></td>
+              <td><%= link_to "戻る", admin_root_path, class:"btn btn-primary ml-3" %></td>
             </div>
           </div>
         <% end %>
