--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,6 +20,9 @@
             </li>
           <% elsif admin_signed_in? %>
             <li>
+              <%= link_to "トップ", admin_root_path, class:"btn btn-primary mr-3" %>
+            </li>
+            <li>
               <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'btn btn-primary mr-1' %>
             </li>
           <% else %>
@@ -31,9 +34,6 @@
             </li>
             <li>
               <%= link_to "管理者ログイン", admin_session_path, class: 'btn btn-primary mr-1' %>
-            </li>
-            <li>
-              <%= link_to "お問い合わせ", user_homes_contact_path, class: 'btn btn-primary mr-2' %>
             </li>
           <% end %>
         </ul>
