--- a/app/views/user/informations/new.html.erb
+++ b/app/views/user/informations/new.html.erb
@@ -25,18 +25,9 @@
               <%= f.label :content %>
             </label>
             <div class="col-md-6">
-              <%= f.text_field :content, class: 'form-control information_content' %>
+              <%= f.text_area :content, class: 'form-control information_content' %>
             </div>
           </div>
-        
-          <!--<div class="form-group row py-1">-->
-          <!--  <label for="genre" class="col-md-4 col-form-label text-md-right">-->
-          <!--    %= f.label :genre %>-->
-          <!--  </label>-->
-          <!--  <div class="col-md-6">-->
-          <!--    <%= f.collection_select :genre_id, Genre.all, :id, :name, include_blank: "--選択して下さい--" %>-->
-          <!--  </div>-->
-          <!--</div>-->
           
           <div class="form-group row mb-0">
             <div class="col-md-6 offset-md-4 text-center mt-2 mb-5 mx-auto">
