--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -32,7 +32,7 @@
               ジャンル
             </label>
             <div class="col-md-6">
-              <%= @user.genre.name %>
+              <%= @user.genre_id %>
             </div>
           </div>
 
@@ -42,7 +42,7 @@
               ステータス
             </label>
             <div class="col-md-6">
-              <%= @user.status.name %>
+              <%= @user.status_id %>
             </div>
           </div>
 
@@ -151,7 +151,7 @@
               ジャンル
             </label>
             <div class="col-md-6">
-              <%= @user.genre.name %>
+              <%= @user.genre_id %>
             </div>
           </div>
 
@@ -161,7 +161,7 @@
               ステータス
             </label>
             <div class="col-md-6">
-              <%= @user.status.name %>
+              <%= @user.status_id %>
             </div>
           </div>
 
