--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,6 +18,7 @@
             <li>
               <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'btn btn-primary mr-1' %>
             </li>
+            <%= render 'layouts/form' %>
           <% elsif admin_signed_in? %>
             <li>
               <%= link_to "トップ", admin_root_path, class:"btn btn-primary mr-3" %>
