--- a/app/views/user/videos/show.html.erb
+++ b/app/views/user/videos/show.html.erb
@@ -55,11 +55,10 @@
           <div class="row justify-content-center">
             <% video_user = @video.user %>
               <% if current_user == video_user %>
-                <%= link_to "削除", user_video_path(@video), method: :delete %>
-                |
-                <%= link_to "コメントする", user_video_comments_path(@video) %>
+                <%= link_to "削除", user_video_path(@video), method: :delete, class:"btn btn-primary ml-3"  %>
+                <%= link_to "コメントする", user_video_comments_path(@video), class:"btn btn-primary ml-3"  %>
               <% else %>
-                <%= link_to "コメントする", user_video_comments_path(@video) %>
+                <%= link_to "コメントする", user_video_comments_path(@video), class:"btn btn-primary ml-3"  %>
               <% end %>
           </div>
         </div>
